# product_chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  cronjob.sh  pyproject.toml  run_supermarkets.bat  supermarket_cronjob.sh
config/: log_config.py
database/: connection.py  models.py  utils_db.py
dependencies/: authenticator.py  dependencies.txt
email_notifications/: email_generator.py  success_eci.txt
src/: data_extractor.py  main.py
src/data_extractors/: generic_extractor.py  supermarket_extractor.py
src/data_extractors/corte_ingles/: eci_generic_extractor.py  eci_supermarket_extractor.py
src/data_extractors/corte_ingles.py/: eci_generic_extractor.py  eci_supermarket_extractor.py  supermarket_extractor.py
src/data_extractors/mercadona/: mercadona_extractor.py
utils/: data_eraser.py  default_columns.py  headers.py
